# Zink

./: .gitignore  .readthedocs.yaml  README.md  index.html  install.sh  main.z  publish.sh  pyproject.toml  requirements.txt  test.py  test.z  zink.py
docs/: conf.py  index.md  installation.md  syntax.md  usage.md
pages/: CNAME
src/zlang/: __main__.py  zink.py
src/zlang/translators/: _lua.py  _py.py  _zink.py  t.py
translators/: _py.py  t.py
