[project]
name = "zlang"
version = "0.0.5"
description = "Lightweight and expressive programming language similar to Python"
authors = [
    {name = "magnesium", email = "datas3gment@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sly (>=0.5,<0.6)"
]

[tool.poetry]
packages = [{include = "zlang", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
